--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,6 +22,10 @@
     "default_icon": "assets/icon48.png",
     "default_popup": "assets/popup.html"
   },
+  "options_ui": {
+    "page": "assets/options.html",
+    "open_in_tab": false
+  },
   "permissions": [
     "tabs",
     "storage"
