--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 os: osx
-osx_image: xcode10
 language: node_js
-node_js: 10
+node_js: node
 
 cache:
   yarn: true
@@ -18,6 +17,7 @@ deploy:
   file_glob: true
   file: dist/*
   skip_cleanup: true
+  draft: true
 
 branches:
   only:
