--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-live-chat-speaker",
-  "description": "Message Speaker on YouTube Live Chat",
+  "description": "Chrome Extension for Speaking Messages on YouTube Live Chat",
   "version": "0.0.6",
   "author": {
     "name": "fiahfy",
@@ -8,34 +8,40 @@
     "url": "https://fiahfy.github.io/"
   },
   "dependencies": {
-    "vue": "^2.6.10",
-    "vuetify": "^2.0.18",
-    "vuex": "^3.1.1",
-    "vuex-persist": "^2.1.0",
-    "webextension-polyfill": "^0.4.0"
+    "vue": "^2.6.11",
+    "vue-property-decorator": "^8.4.1",
+    "vuetify": "^2.2.20",
+    "vuex": "^3.1.3",
+    "vuex-module-decorators": "^0.16.1",
+    "vuex-persist": "^2.2.0",
+    "webextension-polyfill-ts": "^0.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-transform-runtime": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/register": "^7.6.0",
-    "@babel/runtime": "^7.6.0",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^3.0.5",
-    "prettier": "^1.18.2",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-extension-reloader": "^1.1.1"
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.0.4",
+    "husky": "^4.2.3",
+    "prettier": "^2.0.2",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "svg-inline-loader": "^0.8.2",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-extension-reloader": "^1.1.4"
   },
   "keywords": [
     "chrome extension",
@@ -45,16 +51,16 @@
     "youtube"
   ],
   "private": true,
-  "productName": "YouTube Live Chat Speaker",
+  "productName": "Chat Speaker for YouTube Live",
   "repository": {
     "type": "git",
     "url": "https://github.com/fiahfy/youtube-live-chat-speaker"
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack -w --config webpack.config.dev.babel.js",
-    "lint": "eslint -f codeframe --ext .js,.vue --ignore-path .gitignore .",
-    "package": "NODE_ENV=production npm run build && mkdir -p dist && zip -r dist/archive.zip app",
+    "dev": "webpack -w --config webpack.config.dev.js",
+    "lint": "eslint -f codeframe --ext .ts,.vue --ignore-path .gitignore src",
+    "package": "npm run build -- -p && mkdir -p dist && zip -r dist/archive.zip app",
     "test": "npm run lint"
   }
 }
