--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "icons": {
-    "128": "assets/icon.png"
+    "128": "icon.png"
   },
   "background": {
     "scripts": ["background.js"]
@@ -15,11 +15,11 @@
     }
   ],
   "page_action": {
-    "default_icon": "assets/icon.png",
-    "default_popup": "assets/popup.html"
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "options_ui": {
-    "page": "assets/options.html",
+    "page": "options.html",
     "open_in_tab": false
   },
   "permissions": [
